--- a/interface/app/views/main.html
+++ b/interface/app/views/main.html
@@ -1,10 +1,3 @@
 <div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-</div>
-
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    Titi toto tutu
-  </p>
+  <h1>Tests Cucumber</h1>
 </div>
