--- a/interface/app/views/test-runs.html
+++ b/interface/app/views/test-runs.html
@@ -1,6 +1,6 @@
-<div class="row marketing">
+<div>
 
-  <h1>Latest test runs</h1>
+  <h1>Derniers tirs de tests</h1>
 
   <div ng-repeat="testRun in ctrl.latestTestRuns">
     <h2>
