--- a/interface/app/views/tc-tags.html
+++ b/interface/app/views/tc-tags.html
@@ -1,3 +1,3 @@
-<span ng-repeat="tag in ctrl.feature.tags">
+<span ng-repeat="tag in tags">
   <span class="label label-info">@{{ tag }}</span>
 </span>
