--- a/tests-cucumber-ui/app/views/tc-status.html
+++ b/tests-cucumber-ui/app/views/tc-status.html
@@ -2,7 +2,8 @@
   <span class="label label-success" ng-switch-when="PASSED">Succès</span>
   <span class="label label-danger" ng-switch-when="FAILED">Échec</span>
   <span class="label label-danger" ng-switch-when="UNDEFINED">Non défini</span>
-  <span class="label label-default" ng-switch-when="SKIPPED">Zappé</span>
+  <span class="label label-default" ng-switch-when="SKIPPED">Sauté</span>
+  <span class="label label-default" ng-switch-when="NOT_RUN">Non joué</span>
   <span class="label label-warning" ng-switch-when="PENDING">En attente</span>
   <span class="label label-warning" ng-switch-default>{{ status }}</span>
 </ng-switch>
