--- a/tests-cucumber-ui/app/views/feature.html
+++ b/tests-cucumber-ui/app/views/feature.html
@@ -25,19 +25,24 @@
       <tc-tags tags="scenario.tags"></tc-tags>
     </h2>
 
-    <p ng-repeat="action in scenario.beforeActions">
-      <i><b>Pré-action</b> #{{ $index + 1 }}</i>
-      <tc-status status="action.status"></tc-status>
-    </p>
+    <div ng-repeat="action in scenario.beforeActions">
+      <p>
+        <i><b>Pré-action</b> #{{ $index + 1 }}</i>
+        <tc-status status="action.status"></tc-status>
+      </p>
+      <pre ng-if="action.errorMessage">{{ action.errorMessage }}</pre>
+    </div>
 
-    <div ng-if="scenario.background">
-      <p ng-repeat="step in scenario.background.steps">
+    <div ng-if="scenario.background" ng-repeat="step in scenario.background.steps">
+
+      <p>
         <i>
           <tc-element-info info="step.info"></tc-element-info>
         </i>
         <tc-status status="step.status"></tc-status>
       </p>
 
+      <pre ng-if="step.errorMessage">{{ step.errorMessage }}</pre>
 
     </div>
 
@@ -56,12 +61,17 @@
         </tbody>
       </table>
 
+      <pre ng-if="step.errorMessage">{{ step.errorMessage }}</pre>
+
     </div>
 
-    <p ng-repeat="action in scenario.afterActions">
-      <i><b>Post-action</b> #{{ scenario.afterActions.length - $index }}</i>
-      <tc-status status="action.status"></tc-status>
-    </p>
+    <div ng-repeat="action in scenario.afterActions">
+      <p>
+        <i><b>Post-action</b> #{{ scenario.afterActions.length - $index }}</i>
+        <tc-status status="action.status"></tc-status>
+      </p>
+      <pre ng-if="action.errorMessage">{{ action.errorMessage }}</pre>
+    </div>
 
   </div>
 
