--- a/tests-cucumber-ui/app/views/test-runs.html
+++ b/tests-cucumber-ui/app/views/test-runs.html
@@ -2,18 +2,43 @@
 
   <h1>Derniers tirs de tests</h1>
 
-  <!-- Button to create a test run -->
-  <p>
-    <button type="button" class="btn btn-primary btn-lg" ng-click="ctrl.openCreateForm()">
-      Créer un tir de tests
-    </button>
-  </p>
+  <hr>
 
-  <h2 ng-repeat="testRun in ctrl.latestTestRuns">
-    <a ng-href="#/test-runs/{{ testRun.id }}">Test run @ {{ testRun.date | date:'yyyy-MM-dd HH:mm' }}</a>
-    <span class="label label-default">{{ testRun.env }}</span>
-    <tc-test-run-status status="testRun.status"></tc-test-run-status>
-  </h2>
+  <div class="btn-toolbar" role="toolbar">
+    <div class="btn-group" role="group">
+
+      <button type="button" class="btn btn-primary btn-default" ng-click="ctrl.openCreateForm()">
+        <span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span>
+        Créer un tir de tests
+      </button>
+
+    </div>
+  </div>
+
+  <hr>
+
+  <table class="table table-striped table-bordered">
+    <thead>
+    <tr>
+      <th>Tir de test</th>
+      <th>Environnement</th>
+      <th>Statut</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr ng-repeat="testRun in ctrl.latestTestRuns">
+      <td>
+        <a ng-href="#/test-runs/{{ testRun.id }}">Tir du {{ testRun.date | date:'dd/MM/yyyy à HH:mm' }}</a>
+      </td>
+      <td>
+        <span class="label label-default">{{ testRun.env }}</span>
+      </td>
+      <td>
+        <tc-test-run-status status="testRun.status"></tc-test-run-status>
+      </td>
+    </tr>
+    </tbody>
+  </table>
 
   <!-- Create test run modal window -->
   <script type="text/ng-template" id="createTestRunForm.html">
