--- a/tests-cucumber-ui/app/views/feature.html
+++ b/tests-cucumber-ui/app/views/feature.html
@@ -11,7 +11,8 @@
 
   <p>
     <b>Tir :</b>
-    <a ng-href="#/test-runs/{{ ctrl.feature.testRun.id }}">{{ ctrl.feature.testRun.date | date:'dd/MM/yyyy à HH:mm' }}</a>
+    <a ng-href="#/test-runs/{{ ctrl.feature.testRun.id }}">{{ ctrl.feature.testRun.date | date:'dd/MM/yyyy à HH:mm'
+      }}</a>
     <span class="label label-default">{{ ctrl.feature.testRun.env }}</span>
   </p>
 
@@ -19,68 +20,34 @@
 
   <p>
     <tc-line-breaks content="ctrl.feature.description"></tc-line-breaks>
+  </p>
+
   <hr>
 
-  <div ng-repeat="scenario in ctrl.feature.scenarii">
-
-    <h2>
-      <tc-element-info info="scenario.info"></tc-element-info>
-      <tc-status status="scenario.status"></tc-status>
-    </h2>
-
-    <p ng-if="scenario.tags">
-      <tc-tags tags="scenario.tags"></tc-tags>
-    </p>
-
-    <div ng-repeat="action in scenario.beforeActions">
-      <p>
-        <i><b>Pré-action</b> #{{ $index + 1 }}</i>
-        <tc-status status="action.status"></tc-status>
-      </p>
-      <pre ng-if="action.errorMessage">{{ action.errorMessage }}</pre>
-    </div>
-
-    <div ng-if="scenario.background" ng-repeat="step in scenario.background.steps">
-
-      <p>
-        <i>
-          <tc-element-info info="step.info"></tc-element-info>
-        </i>
-        <tc-status status="step.status"></tc-status>
-      </p>
-
-      <pre ng-if="step.errorMessage">{{ step.errorMessage }}</pre>
-
-    </div>
-
-    <div ng-repeat="step in scenario.steps">
-
-      <p>
-        <tc-element-info info="step.info"></tc-element-info>
-        <tc-status status="step.status"></tc-status>
-      </p>
-
-      <table ng-if="step.table" class="table table-hover table-condensed" style="table-layout: auto">
-        <tbody>
-        <tr ng-repeat="row in step.table">
-          <td ng-repeat="cell in row"><code>{{ cell }}</code></td>
-        </tr>
-        </tbody>
-      </table>
-
-      <pre ng-if="step.errorMessage">{{ step.errorMessage }}</pre>
-
-    </div>
-
-    <div ng-repeat="action in scenario.afterActions">
-      <p>
-        <i><b>Post-action</b> #{{ $index + 1 }}</i>
-        <tc-status status="action.status"></tc-status>
-      </p>
-      <pre ng-if="action.errorMessage">{{ action.errorMessage }}</pre>
-    </div>
-
-  </div>
+  <table class="table table-striped table-bordered">
+    <thead>
+    <tr>
+      <th>Scénario</th>
+      <th>Tags</th>
+      <th>Statut</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr ng-repeat="scenario in ctrl.feature.scenarii">
+      <td>
+        <a ng-href="#/scenarii/{{ scenario.id }}">
+          <tc-element-info info="scenario.info"></tc-element-info>
+        </a>
+      </td>
+      <td>
+        <tc-tags tags="scenario.tags"></tc-tags>
+      </td>
+      <td>
+        <tc-status status="scenario.status"></tc-status>
+      </td>
+    </tr>
+    </tbody>
+  </table>
 
 </div>
 
