--- a/tests-cucumber-ui/app/views/tc-tags.html
+++ b/tests-cucumber-ui/app/views/tc-tags.html
@@ -1,3 +1,3 @@
-<span ng-repeat="tag in tags">
+<span ng-repeat="tag in tags | orderBy">
   <span class="label label-info">@{{ tag }}</span>
 </span>
