--- a/tests-cucumber-ui/app/views/test-runs.html
+++ b/tests-cucumber-ui/app/views/test-runs.html
@@ -43,7 +43,7 @@
   <!-- Create test run modal window -->
   <script type="text/ng-template" id="createTestRunForm.html">
     <div class="modal-header">
-      <button type="button" class="close" ng-click="createCtrl.dismiss()" aria-label="Fermer">
+      <button type="button" class="close" ng-click="$dismiss()" aria-label="Fermer">
         <span aria-hidden="true">&times;</span>
       </button>
       <h4 class="modal-title">Créer un nouveau tir de tests</h4>
@@ -55,8 +55,8 @@
       </div>
     </div>
     <div class="modal-footer">
-      <button type="button" class="btn btn-default" ng-click="createCtrl.dismiss()">Annuler</button>
-      <button type="button" class="btn btn-primary" ng-click="createCtrl.create(user)">Créer</button>
+      <button type="button" class="btn btn-default" ng-click="$dismiss()">Annuler</button>
+      <button type="button" class="btn btn-primary" ng-click="createCtrl.create()">Créer</button>
     </div>
   </script>
 
