--- a/tests-cucumber-ui/app/views/feature.html
+++ b/tests-cucumber-ui/app/views/feature.html
@@ -33,11 +33,11 @@
   <table class="table table-bordered">
     <thead>
     <tr>
-      <th>Nombre de scénarii</th>
-      <th>Succès</th>
-      <th>Echecs</th>
-      <th>En attente</th>
-      <th>Non joués</th>
+      <th class="col-md-2">Nombre de scénarii</th>
+      <th class="col-md-2">Succès</th>
+      <th class="col-md-2">Echecs</th>
+      <th class="col-md-2">En attente</th>
+      <th class="col-md-2">Non joués</th>
     </tr>
     </thead>
     <tbody>
@@ -60,9 +60,8 @@
   <table class="table table-striped table-bordered">
     <thead>
     <tr>
-      <th>Scénario</th>
-      <th>Tags</th>
-      <th>Statut</th>
+      <th class="col-md-11">Scénario</th>
+      <th class="col-md-1">Statut</th>
     </tr>
     </thead>
     <tbody>
@@ -71,9 +70,6 @@
         <a ng-href="#/scenarii/{{ scenario.id }}">
           <tc-element-info info="scenario.info"></tc-element-info>
         </a>
-      </td>
-      <td>
-        <tc-tags tags="scenario.tags"></tc-tags>
       </td>
       <td>
         <tc-status status="scenario.status"></tc-status>
