--- a/tests-cucumber-ui/app/views/test-run.html
+++ b/tests-cucumber-ui/app/views/test-run.html
@@ -33,13 +33,12 @@
   <table class="table table-striped table-bordered">
     <thead>
     <tr>
-      <th>Fonctionnalité</th>
-      <th>Tags</th>
-      <th>Nombre de scénarii</th>
-      <th>Succès</th>
-      <th>Echecs</th>
-      <th>En attente</th>
-      <th>Non joués</th>
+      <th class="col-md-7">Fonctionnalité</th>
+      <th class="col-md-1">Total</th>
+      <th class="col-md-1">Succès</th>
+      <th class="col-md-1">Echecs</th>
+      <th class="col-md-1">En attente</th>
+      <th class="col-md-1">Non joués</th>
     </tr>
     </thead>
     <tbody>
@@ -48,9 +47,6 @@
         <a ng-href="#/features/{{ feature.id }}">
           {{ feature.info.name }}
         </a>
-      </td>
-      <td>
-        <tc-tags tags="feature.tags"></tc-tags>
       </td>
       <td><span class="badge">{{ feature.stats.scenarioCount }}</span></td>
       <td><span class="badge">{{ feature.stats.statsByStatus['PASSED'] }}</span></td>
