--- a/tests-cucumber-ui/app/views/feature.html
+++ b/tests-cucumber-ui/app/views/feature.html
@@ -17,6 +17,21 @@
     <tc-tags tags="ctrl.feature.tags"></tc-tags>
   </p>
 
+  <!-- Buttons -->
+
+  <hr>
+
+  <div class="btn-group" role="group">
+
+    <button ng-click="ctrl.delete()" class="btn btn-danger btn-default">
+      <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+      Supprimer
+    </button>
+
+  </div>
+
+  <!-- Description -->
+
   <hr>
 
   <p>
