--- a/tests-cucumber-ui/app/views/scenario.html
+++ b/tests-cucumber-ui/app/views/scenario.html
@@ -46,6 +46,14 @@
       </button>
 
     </div>
+    <div class="btn-group" role="group">
+
+      <button ng-click="ctrl.delete()" class="btn btn-danger btn-default">
+        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+        Supprimer
+      </button>
+
+    </div>
   </div>
 
   <hr>
