--- a/tests-cucumber-ui/app/views/feature.html
+++ b/tests-cucumber-ui/app/views/feature.html
@@ -3,7 +3,9 @@
   <ol class="breadcrumb">
     <li>Environnement {{ ctrl.feature.testRun.env }}</li>
     <li class="active">
-      <a ng-href="#/test-runs/{{ ctrl.feature.testRun.id }}">Tir du {{ ctrl.feature.testRun.date | date:'dd/MM/yyyy à HH:mm' }}</a>
+      <a ng-href="#/test-runs/{{ ctrl.feature.testRun.id }}">
+        Tir du {{ ctrl.feature.testRun.date | date:'dd/MM/yyyy à HH:mm' }}
+      </a>
     </li>
     <li class="active">{{ ctrl.feature.info.keyword }} {{ ctrl.feature.info.name }}</li>
   </ol>
@@ -95,6 +97,41 @@
       <td>
         <tc-status status="scenario.status"></tc-status>
       </td>
+    </tr>
+    </tbody>
+  </table>
+
+  <!-- History -->
+
+  <hr>
+
+  <h2>Historique</h2>
+
+  <table class="table table-striped table-bordered">
+    <thead>
+    <tr>
+      <th class="col-md-7">Tir</th>
+      <th class="col-md-1">Nombre de scénarii</th>
+      <th class="col-md-1">Succès</th>
+      <th class="col-md-1">Echecs</th>
+      <th class="col-md-1">En attente</th>
+      <th class="col-md-1">Non joués</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr ng-repeat="feature in ctrl.history">
+      <td>
+        <a ng-href="#/features/{{ feature.id }}">
+          {{ feature.testRun.date | date:'dd/MM/yyyy à HH:mm' }}
+        </a>
+        <span ng-if="ctrl.feature.testRunId === feature.testRunId" class="glyphicon glyphicon-asterisk"
+              aria-hidden="true"></span>
+      </td>
+      <td><span class="badge">{{ feature.stats.scenarioCount }}</span></td>
+      <td><span class="badge">{{ feature.stats.statsByStatus['PASSED'] }}</span></td>
+      <td><span class="badge">{{ feature.stats.statsByStatus['FAILED'] }}</span></td>
+      <td><span class="badge">{{ feature.stats.statsByStatus['PENDING'] }}</span></td>
+      <td><span class="badge">{{ feature.stats.statsByStatus['NOT_RUN'] }}</span></td>
     </tr>
     </tbody>
   </table>
