--- a/tests-cucumber-ui/app/views/tc-status.html
+++ b/tests-cucumber-ui/app/views/tc-status.html
@@ -5,5 +5,6 @@
   <span class="label label-default" ng-switch-when="SKIPPED">Sauté</span>
   <span class="label label-default" ng-switch-when="NOT_RUN">Non joué</span>
   <span class="label label-warning" ng-switch-when="PENDING">En attente</span>
+  <span class="label label-warning" ng-switch-when="PARTIAL">Partiel</span>
   <span class="label label-warning" ng-switch-default>{{ status }}</span>
 </ng-switch>
